--- a/app/views/Vote.scala.html
+++ b/app/views/Vote.scala.html
@@ -131,13 +131,13 @@
     </div>
 }
 @css = {
-    <script type="text/javascript" src="@routes.Assets.at("bootstrap-rating/bootstrap-rating.min.js")"></script>
-    <link rel="stylesheet" media="screen" href="@routes.Assets.at("bootstrap-rating/bootstrap-rating.css")">
+    <script type="text/javascript" src="@routes.Assets.at("public","bootstrap-rating/bootstrap-rating.min.js")"></script>
+    <link rel="stylesheet" media="screen" href="@routes.Assets.at("public","bootstrap-rating/bootstrap-rating.css")">
 
     <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="@routes.Assets.at("materialize/css/materialize.min.css")">
+    <link rel="stylesheet" href="@routes.Assets.at("public","materialize/css/materialize.min.css")">
 
     <!-- Compiled and minified JavaScript -->
-    <script src="@routes.Assets.at("materialize/js/materialize.min.js")"></script>
+    <script src="@routes.Assets.at("public","materialize/js/materialize.min.js")"></script>
 
 }
