--- a/app/views/main_menu.scala.html
+++ b/app/views/main_menu.scala.html
@@ -100,6 +100,6 @@
 }
 
 @css = {
-    <script src="@routes.Assets.at("javascripts/jquery.countdown.min.js")" type="text/javascript"></script>
+    <script src="@routes.Assets.at("/public", "javascripts/jquery.countdown.min.js")" type="text/javascript"></script>
     <script type="text/javascript" src="//api.filepicker.io/v1/filepicker.js"></script>
 }
