--- a/app/views/Vote.scala.html
+++ b/app/views/Vote.scala.html
@@ -74,68 +74,154 @@
         <div class="uk-width-9-10 uk-container-center">
             <div class="uk-panel uk-panel-box ">
                 <legend>Creativity</legend>
-    <form action="#">
-        <p>
-            <input class="with-gap" name="group1" type="radio" id="test1" />
-            <label for="test1">1</label>
-        </p>
-        <p>
-            <input class="with-gap" name="group1" type="radio" id="test2" />
-            <label for="test2">2</label>
-        </p>
-        <p>
-            <input class="with-gap" name="group1" type="radio" id="test3"  />
-            <label for="test3">3</label>
-        </p>
-        <p>
-            <input class="with-gap" name="group1" type="radio" id="test4" />
-            <label for="test4">4</label>
-        </p>
-        <p>
-            <input class="with-gap" name="group1" type="radio" id="test5" />
-            <label for="test5">5</label>
-        </p>
-    </form>
+
+
+                    <!-- RATING - Form -->
+                <form class="rating-form" action="#" method="post" name="rating-movie" >
+                    <fieldset class="form-group">
+
+                        <legend class="form-legend">Rating:</legend>
+
+                        <div class="form-item">
+
+                            <input id="rating-5" name="rating" type="radio" value="5" />
+                            <label for="rating-5" data-value="5">
+                                <span class="rating-star">
+                                    <i class="fa fa-star-o"></i>
+                                    <i class="fa fa-star"></i>
+                                </span>
+                                <span class="ir">5</span>
+                            </label>
+                            <input id="rating-4" name="rating" type="radio" value="4" />
+                            <label for="rating-4" data-value="4">
+                                <span class="rating-star">
+                                    <i class="fa fa-star-o"></i>
+                                    <i class="fa fa-star"></i>
+                                </span>
+                                <span class="ir">4</span>
+                            </label>
+                            <input id="rating-3" name="rating" type="radio" value="3" />
+                            <label for="rating-3" data-value="3">
+                                <span class="rating-star">
+                                    <i class="fa fa-star-o"></i>
+                                    <i class="fa fa-star"></i>
+                                </span>
+                                <span class="ir">3</span>
+                            </label>
+                            <input id="rating-2" name="rating" type="radio" value="2" />
+                            <label for="rating-2" data-value="2">
+                                <span class="rating-star">
+                                    <i class="fa fa-star-o"></i>
+                                    <i class="fa fa-star"></i>
+                                </span>
+                                <span class="ir">2</span>
+                            </label>
+                            <input id="rating-1" name="rating" type="radio" value="1" />
+                            <label for="rating-1" data-value="1">
+                                <span class="rating-star">
+                                    <i class="fa fa-star-o"></i>
+                                    <i class="fa fa-star"></i>
+                                </span>
+                                <span class="ir">1</span>
+                            </label>
+
+                            @*<div class="form-action">*@
+                                @*<input class="btn-reset" type="reset" value="Reset" />*@
+                            @*</div>*@
+
+                            @*<div class="form-output">*@
+                                @*? / 5*@
+                            @*</div>*@
+
+                        </div>
+
+                    </fieldset>
+                </form>
+
             </div>
         </div>
     </div>
 
-    <div class="uk-grid uk-grid-small" data-uk-grid-margin>
-        <div class="uk-width-9-10 uk-container-center">
-            <div class="uk-panel uk-panel-box ">
-                <legend>Innovation</legend>
-                <form action="#">
-                    <p>
-                        <input class="with-gap" name="group2" type="radio" id="test6" />
-                        <label for="test6">6</label>
-                    </p>
-                    <p>
-                        <input class="with-gap" name="group2" type="radio" id="test7" />
-                        <label for="test7">7</label>
-                    </p>
-                    <p>
-                        <input class="with-gap" name="group2" type="radio" id="test8"  />
-                        <label for="test8">8</label>
-                    </p>
-                    <p>
-                        <input class="with-gap" name="group2" type="radio" id="test9" />
-                        <label for="test9">9</label>
-                    </p>
-                    <p>
-                        <input class="with-gap" name="group2" type="radio" id="test10" />
-                        <label for="test10">10</label>
-                    </p>
-                </form>
-            </div>
-        </div>
-    </div>
+    @*<div class="uk-grid uk-grid-small" data-uk-grid-margin>*@
+        @*<div class="uk-width-9-10 uk-container-center">*@
+            @*<div class="uk-panel uk-panel-box ">*@
+                @*<legend>Innovation</legend>*@
+
+
+                    @*<!-- RATING - Form -->*@
+                @*<form class="rating-form" action="#" method="post" name="rating-movie" >*@
+                    @*<fieldset class="form-group2">*@
+
+                        @*<legend class="form-legend">Rating:</legend>*@
+
+                        @*<div class="form-item">*@
+
+                            @*<input id="rating-5" name="rating" type="radio" value="5" />*@
+                            @*<label for="rating-5" data-value="5">*@
+                                @*<span class="rating-star">*@
+                                    @*<i class="fa fa-star-o"></i>*@
+                                    @*<i class="fa fa-star"></i>*@
+                                @*</span>*@
+                                @*<span class="ir">5</span>*@
+                            @*</label>*@
+                            @*<input id="rating-4" name="rating" type="radio" value="4" />*@
+                            @*<label for="rating-4" data-value="4">*@
+                                @*<span class="rating-star">*@
+                                    @*<i class="fa fa-star-o"></i>*@
+                                    @*<i class="fa fa-star"></i>*@
+                                @*</span>*@
+                                @*<span class="ir">4</span>*@
+                            @*</label>*@
+                            @*<input id="rating-3" name="rating" type="radio" value="3" />*@
+                            @*<label for="rating-3" data-value="3">*@
+                                @*<span class="rating-star">*@
+                                    @*<i class="fa fa-star-o"></i>*@
+                                    @*<i class="fa fa-star"></i>*@
+                                @*</span>*@
+                                @*<span class="ir">3</span>*@
+                            @*</label>*@
+                            @*<input id="rating-2" name="rating" type="radio" value="2" />*@
+                            @*<label for="rating-2" data-value="2">*@
+                                @*<span class="rating-star">*@
+                                    @*<i class="fa fa-star-o"></i>*@
+                                    @*<i class="fa fa-star"></i>*@
+                                @*</span>*@
+                                @*<span class="ir">2</span>*@
+                            @*</label>*@
+                            @*<input id="rating-1" name="rating" type="radio" value="1" />*@
+                            @*<label for="rating-1" data-value="1">*@
+                                @*<span class="rating-star">*@
+                                    @*<i class="fa fa-star-o"></i>*@
+                                    @*<i class="fa fa-star"></i>*@
+                                @*</span>*@
+                                @*<span class="ir">1</span>*@
+                            @*</label>*@
+
+                            @*<div class="form-action">*@
+                            @*<input class="btn-reset" type="reset" value="Reset" />*@
+                            @*</div>*@
+
+                            @*<div class="form-output">*@
+                            @*? / 5*@
+                            @*</div>*@
+
+                        @*</div>*@
+
+                    @*</fieldset>*@
+                @*</form>*@
+
+            @*</div>*@
+        @*</div>*@
+    @*</div>*@
 }
 @css = {
     <script type="text/javascript" src="@routes.Assets.at("bootstrap-rating/bootstrap-rating.min.js")"></script>
     <link rel="stylesheet" media="screen" href="@routes.Assets.at("bootstrap-rating/bootstrap-rating.css")">
+    <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="@routes.Assets.at("materialize/css/materialize.min.css")">
+    <link rel="stylesheet" href="@routes.Assets.at("materialize/css/rate.css")">
 
     <!-- Compiled and minified JavaScript -->
     <script src="@routes.Assets.at("materialize/js/materialize.min.js")"></script>
