--- a/app/views/team.scala.html
+++ b/app/views/team.scala.html
@@ -1,4 +1,4 @@
-@(group: Team)(members: List[Account])
+@(group: Team)(members: List[Account])(screenshots: List[Screenshot])
 
 @main("Group List")(css) {
     <div class="uk-grid uk-text-center uk-grid-collapse">
@@ -16,10 +16,10 @@
     <div class="uk-grid uk-grid-small" data-uk-grid-margin>
         <div class="uk-width-9-10 uk-container-center">
             <div class="panel panel-default border-zero-width">
-                <div class="panel-heading border-zero-width" style="background-color:#FF6262">
+                <div class="panel-heading border-zero-width" style="background-color:#66CC99">
                     <h3 class="panel-title ui-text-white"><b>Description</b></h3>
                 </div>
-                <div class="panel-body border-zero-width ui-text-white" style="background-color:#ff8484">
+                <div class="panel-body border-zero-width ui-text-white" style="background-color:#16A085">
                 @group.description
                 </div>
             </div>
@@ -29,10 +29,10 @@
     <div class="uk-grid uk-grid-small" data-uk-grid-margin>
         <div class="uk-width-9-10 uk-container-center">
             <div class="panel panel-default border-zero-width" >
-                <div class="panel-heading border-zero-width"  style="background-color:#B894FF">
+                <div class="panel-heading border-zero-width"  style="background-color:#89C4F4">
                     <h3 class="panel-title ui-text-white"><b>Member</b></h3>
                 </div>
-                <div class="panel-body border-zero-width"  style="background-color:#D6C2FF">
+                <div class="panel-body border-zero-width"  style="background-color:#4B77BE">
                     <ul class="ui-text-white">
                     @members.map { member =>
                         <li>@member.name @member.lastname</li>
@@ -42,6 +42,24 @@
             </div>
         </div>
     </div>
+
+
+    <div class="uk-grid uk-grid-small" data-uk-grid-margin>
+        <div class="uk-width-9-10 uk-container-center">
+            <div class="panel panel-default border-zero-width" >
+                <div class="panel-heading border-zero-width"  style="background-color:#ABB7B7">
+                    <h3 class="panel-title ui-text-white"><b>Screenshot</b></h3>
+                </div>
+                <div class="panel-body border-zero-width"  style="background-color:#ECECEC">
+                @screenshots.map { screenshot =>
+                    <img class="uk-border-rounded uk-margin-small" width="100%" src="@screenshot.url">
+                }
+
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div class="uk-grid uk-grid-small" data-uk-grid-margin>
         <div class="uk-width-9-10 uk-container-center">
             <a class="uk-button uk-button-large uk-width-1-1 ui-eucalyptus ui-text-white ui-button" href="@routes.Application.voting">Vote</a>
