--- a/app/views/team.scala.html
+++ b/app/views/team.scala.html
@@ -1,12 +1,12 @@
 @(group: Team)(members: List[Account])(screenshots: List[Screenshot])
 
-@main("Group List")(css) {
+@main("Team Description")(css) {
     <div class="uk-grid uk-text-center uk-grid-collapse">
         <div class="uk-panel uk-width-1-6">
-            <a href="@routes.Application.teamList()" class="uk-button uk-icon-arrow-left uk-margin-small-bottom ui-text-white ui-button ui-redpink" style="width:100%; padding: 18px; border-width: 0; height: 100%"></a>
+            <a href="@routes.Application.teamList()" class="uk-button uk-icon-arrow-left uk-margin-small-bottom ui-text-white ui-button ui-redpink" style="width:100%; padding: 18px; border-width: 0; height: 100%;font-size: large;"></a>
         </div>
         <div class="uk-width-5-6">
-            <div class="uk-panel uk-panel-box ui-yellow ui-text-white" style="border-width: 0;">
+            <div class="uk-panel uk-panel-box ui-yellow ui-text-white" style="border-width: 0;font-size: large;">
                 <b>@group.name</b>
             </div>
         </div>
@@ -60,9 +60,9 @@
         </div>
     </div>
 
-    <div class="uk-grid uk-grid-small" data-uk-grid-margin>
+    <div class="uk-grid uk-margin-large-bottom" data-uk-grid-margin>
         <div class="uk-width-9-10 uk-container-center">
-            <a class="uk-button uk-button-large uk-width-1-1 ui-eucalyptus ui-text-white ui-button" href="@routes.Application.voting">Vote</a>
+            <a class="uk-button uk-button-large uk-width-1-1 ui-eucalyptus ui-text-white ui-button" href="@routes.Application.voting" style="line-height: 120px;"><div style="font-size: 500%">Vote</div></a>
         </div>
     </div>
 
