--- a/app/views/team_list.scala.html
+++ b/app/views/team_list.scala.html
@@ -1,12 +1,12 @@
 @(teams: List[Team])
 
 @main("Team List")(css) {
-    <div class="uk-grid uk-grid-collapse uk-text-center" data-uk-grid-margin>
+    <div class="uk-grid uk-grid-collapse uk-text-center" data-uk-grid-margin >
         <div class="uk-panel uk-width-1-6">
-            <a href="@routes.Application.mainMenu()" class="uk-button uk-icon-arrow-left uk-margin-small-bottom ui-text-white ui-button ui-redpink" style="width : 100 % ; padding : 18 px ; border-width : 0 ; height : 100 % ;"></a>
+            <a href="@routes.Application.mainMenu()" class="uk-button uk-icon-arrow-left uk-margin-small-bottom ui-text-white ui-button ui-redpink" style="width : 100% ; padding : 18px ; border-width : 0 ; height : 100% ; font-size: large;"></a>
         </div>
         <div class="uk-width-5-6">
-            <div class="uk-panel uk-panel-box ui-yellow" style="color: #ffffff; border-width: 0">
+            <div class="uk-panel uk-panel-box ui-yellow" style="color: #ffffff; border-width: 0; font-size: large;">
                 <b>Team List</b>
             </div>
         </div>
