--- a/app/views/register.scala.html
+++ b/app/views/register.scala.html
@@ -29,16 +29,19 @@
                             <input name="lastname" type="text" placeholder="lastname" class="uk-width-1-1" value="@form.data.get("lastname")">
 
                             </select>
-                            <select name="type" value ="type" class="uk-width-1-1 ">
+
+                            <select id="checker" name="type" onchange="checkType(this)" class="uk-width-1-1 ">
                                 <option value="" disabled selected>&#60;type&#62;</option>
+
                                 @userType.map { userType =>
+
                                     <option value="@userType.name">@userType.name</option>
                                 }
 
                             </select>
 
-                            <select name="team" class="uk-width-1-1 uk-margin-bottom">
-                                <option value="" disabled selected>&#60;team&#62;</option>
+                            <select  id="checker2" disabled name="team" class="uk-width-1-1 uk-margin-bottom">
+                                <option id="checkFalse" value="" disabled selected>&#60;team&#62;</option>
                             @teams.map { team =>
                                     <option value="@team.id">@team.name</option>
                             }
@@ -50,6 +53,19 @@
 
             </div>
         </div>
+        <script>
+             function checkType(self) {
+                 console.log(self.value);
+                 if(self.value == "participant" ){
+                 console.log(self.value+"2");
+                  $("#checker2").attr("disabled",false);
+                 }
+                 else {
+                 $("#checker2").attr("disabled",true);
+                     $("#checkFalse" ).attr("selected", true);
+                 }
+        }
+        </script>
         <div class="uk-grid uk-grid-small" data-uk-grid-margin>
             <div class="uk-width-9-10 uk-container-center">
                 <button class="uk-button uk-button-primary uk-button-large uk-width-1-1" type="submit">Submit</button>
@@ -61,6 +77,7 @@
                 <a class="uk-button uk-button-large uk-width-1-1" href="@routes.Application.login">Cancel</a>
             </div>
         </div>
+
     }
 
 
