--- a/app/views/rating.scala.html
+++ b/app/views/rating.scala.html
@@ -112,15 +112,19 @@
                         </div>
                     </a>
                 </div>
-                @*@criteria.name*@
+
             }
         }
         </div>
+
+
+    <div class="uk-grid uk-margin-large-bottom" data-uk-grid-margin>
+        <div class="uk-width-9-10 uk-container-center">
+            <a class="uk-button uk-button-large uk-width-1-1 ui-eucalyptus ui-text-white ui-button" href="@routes.Application.rating()" style="line-height: 50px;"><div style="font-size: 150%">Submit</div></a>
+        </div>
     </div>
 
-    <div class="uk-container-center">
-        <div class="uk-grid uk-grid-margin uk-grid-collapse uk-text-center uk-grid-small">
-            <button type="button"  onclick="post()" class="uk-container-center" style="width:90%; padding: 18px; height: 90%; font-size: large;">Submit Rating</button>
+    </div>
             <script>
             function post() {
             var arr = "";
@@ -144,8 +148,7 @@
             $.post ( "rating", obj , function( data ){});
             }
             </script>
-        </div>
-    </div>
+
 
 
 }
