--- a/app/views/admin/set_time_out.scala.html
+++ b/app/views/admin/set_time_out.scala.html
@@ -4,7 +4,7 @@
 
 @main("Time Out")(css) {
 
-    <div class="uk-grid uk-margin-large-top">
+    <div class="uk-grid uk-margin-large-top uk-margin-bottom">
         <div class="uk-width-9-10 uk-container-center">
             <div class="uk-panel uk-panel-box uk-panel-box-secondary">
                 <div class="uk-form">
